<?xml version="1.0"?>
<package>
  <name>phantomx_reactor_arm_description_v2</name>
  <version>1.1.0</version>
  <description>The phantomx_reactor_arm_description v2 package</description>

  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>
  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <license>BSD</license>

  <url type="website">https://github.com/I-Quotient-Robotics/phantomx_reactor_arm_v2</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/phantomx_reactor_arm_v2.git</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/phantomx_reactor_arm_v2/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>
  </export>
</package>
